--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
 
     // Otto, for event bus
     compile 'com.squareup:otto:1.3.8'
+
+    // Timber for logging
+    compile 'com.jakewharton.timber:timber:4.1.0'
 }
